@@ -412,14 +412,10 @@
 
                                 <div id="contacts" class="tab-pane fade in active tabs-info">
                                     <div class="pull-right tab-search">
-                                        <div class="form-group">
-                                            <label class="sr-only control-label" for="">Search</label>
+                                        <div class="form-inline">
+                                            <label for="" class="control-label branch-sub-label"><input type="checkbox" id="" name="" value="true"> Include All Branches</label>
                                             <input id="" name="" class="form-control" type="search" value="" placeholder="Type here to search...">
                                         </div>
-                                    </div>
-
-                                    <div class="pull-right include-all-branches">
-                                        <label for="" class="control-label branch-sub-label"><input type="checkbox" id="" name="" value="true"> Include All Branches</label>
                                     </div>
 
                                     <div class="portal-tables">
